cluster/apps/zyme/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: zyme
    app.kubernetes.io/version: 43003c2
  name: zyme
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zyme
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zyme
        app.kubernetes.io/version: 43003c2
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/zyme:43003c2@sha256:acc24bda548b5be7493010bc4008a8ad181633620c9fc549012941924f645442
        name: zyme
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 25m
            memory: 96Mi
          limits:
            cpu: 500m
            memory: 384Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
