cluster/apps/zyme/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: zyme
    app.kubernetes.io/version: "3606317"
  name: zyme
spec:
  selector:
    app.kubernetes.io/name: zyme
  ports:
  - name: http
    port: 8080
    targetPort: 8080
